<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rs.raf.projekat1.Filip_Draganic_RN542017.views.activity.LoginActivity"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="top|center"
    android:baselineAligned="false">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/plus_slika"
        android:src="@drawable/ic_add_circle_black_24dp"
        android:layout_margin="10dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opis_aplikacije"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"

        />
    <EditText
        android:id="@+id/imeET"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/ime"
        android:maxLines="1"
    />
    <EditText
        android:id="@+id/prezimeET"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prezime"
        android:maxLines="1"

        />
    <EditText
        android:id="@+id/bolnicaET"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/ime_bolnice"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/pinET"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:maxLength="4"
        android:hint="@string/uneti_pin"
        android:layout_margin="20dp"
        android:inputType="numberPassword"

        />


        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            >

            <Button
                android:id="@+id/prijavaBtn"
                android:layout_width="120dp"
                android:layout_height="60dp"

                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"



                android:gravity="center"
                android:text="@string/prijava_btn" />

        </RelativeLayout>

</LinearLayout>
