<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="40dp"
    android:paddingBottom="80dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    >



    <TextView
        android:id="@+id/naslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregled_brojnog_stanja_pacijenata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/cekaonicaTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broj_pacijenata_u_cekaonici"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@+id/naslov"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/cekaonicaBroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toBottomOf="@id/naslov"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="0"
        />

    <TextView
        android:id="@+id/hospitalizovaniTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broj_hospitalizovanih_pacijenata"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toBottomOf="@+id/naslov"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/hospitalizovaniBroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/naslov"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="0"
        />


    <TextView
        android:id="@+id/otpusteniTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broj_otpustenih_pacijenata"
        android:layout_marginTop="350dp"
        app:layout_constraintTop_toBottomOf="@+id/naslov"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/otpusteniBroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/naslov"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="0"
        />



</androidx.constraintlayout.widget.ConstraintLayout>